--- a/index.html
+++ b/index.html
@@ -15,16 +15,36 @@
       or move files).
     </p>
     <ol>
-      <li></li>
-      <li></li>
-      <li></li>
-      <li></li>
-      <li></li>
-      <li></li>
-      <li></li>
-      <li></li>
-      <li></li>
-      <li></li>
+      <li>
+        In VS Code settings, search for Import Module Specifier Ending and set
+        it to .js/.ts
+      </li>
+      <li>
+        Create a directory to store the files for this assignment and call it
+        alien-planets (remember: you can only use the terminal).
+      </li>
+      <li>Create a file called index.html.</li>
+      <li>Make your first git commit and push to a new repo on GitHub.</li>
+      <li>Create an index.js file. (You aren't using VS Code, ARE YOU?)</li>
+      <li>
+        Create a script tag with an attribute of type="module" and link it to
+        index.js as normal.
+      </li>
+      <li>Create an alienPlanets.js file.</li>
+      <li>Create a style.css file.</li>
+      <li>
+        Copy and paste the array from Canvas into alienPlanets.js (no terminal
+        required for this step)
+      </li>
+      <li>
+        Build the rest of this website without moving the array from
+        alienPlanets.js
+      </li>
     </ol>
+    <h2>Is there life out there?</h2>
+ 
+    <div class="planet"></div>
+      
+    </div>
   </body>
 </html>
