added italic fonts

--- a/index.html
+++ b/index.html
@@ -16,18 +16,18 @@
     </p>
     <ol>
       <li>
-        In VS Code settings, search for Import Module Specifier Ending and set
-        it to .js/.ts
+        In VS Code settings, search for <em>Import Module Specifier Ending</em> and set
+        it to <em>.js/.ts</em>
       </li>
       <li>
         Create a directory to store the files for this assignment and call it
-        alien-planets (remember: you can only use the terminal).
+        <em>alien-planets</em> (remember: you can only use the terminal).
       </li>
-      <li>Create a file called index.html.</li>
+      <li>Create a file called <em>index.html.</em></li>
       <li>Make your first git commit and push to a new repo on GitHub.</li>
       <li>Create an index.js file. (You aren't using VS Code, ARE YOU?)</li>
       <li>
-        Create a script tag with an attribute of type="module" and link it to
+        Create a script tag with an attribute of type=<em>"module"</em> and link it to
         index.js as normal.
       </li>
       <li>Create an alienPlanets.js file.</li>
